@@ -1448,7 +1448,7 @@ sub AI {
 		}
 
 	} elsif (AI::is("", "route", "attack") &&
-	         $config{'storageAuto'} && ($config{storageAuto_npc} ne "" || $config{storageAuto_useChatCommand}) &&
+	         $config{storageAuto} && ($config{storageAuto_npc} ne "" || $config{storageAuto_useChatCommand}) &&
 		 !AI::inQueue("storageAuto") &&
 		 timeOut($timeout{'ai_storageAuto'})) {
 
